[gd_scene load_steps=12 format=3 uid="uid://blqlbo1sxrct"]

[ext_resource type="Script" path="res://Scripts/spell.gd" id="1_0tr7r"]
[ext_resource type="Script" path="res://Scripts/damager.gd" id="3_30yli"]
[ext_resource type="Texture2D" uid="uid://gjol3q4isyop" path="res://Assets/objects/projectile.png" id="3_lxgg3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jweal"]
radius = 4.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o4rqy"]
radius = 4.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7s5d5"]
atlas = ExtResource("3_lxgg3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ydtt"]
atlas = ExtResource("3_lxgg3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x334y"]
atlas = ExtResource("3_lxgg3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiy0s"]
atlas = ExtResource("3_lxgg3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_br1vx"]
atlas = ExtResource("3_lxgg3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f2b24"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s5d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ydtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x334y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiy0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br1vx")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Spell" type="Node2D"]
script = ExtResource("1_0tr7r")

[node name="HitBox" type="Area2D" parent="." groups=["Attack"]]
script = ExtResource("3_30yli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jweal")

[node name="ImpactDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactDetector"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o4rqy")

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_f2b24")
autoplay = "default"
frame_progress = 0.887418

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
